// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blocks Can return aggregated data 1`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "number": 29021,
        "transactions_aggregate": Object {
          "aggregate": Object {
            "avg": Object {
              "fee": 171158,
              "totalOutput": 2846601153795,
            },
            "count": 2,
            "max": Object {
              "fee": 171246,
              "totalOutput": 4924799478660,
            },
            "min": Object {
              "fee": 171070,
              "totalOutput": 768402828930,
            },
            "sum": Object {
              "fee": 342316,
              "totalOutput": 5693202307590,
            },
          },
        },
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`blocks Can return blocks by number 1`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "id": "bf13d9a80ad99a4f34edb8a3262dd8120e29bbe182732cd3b00bf3d1bb7c2380",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`blocks are linked to their predecessor, and the chain can be traversed 1`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "id": "bf13d9a80ad99a4f34edb8a3262dd8120e29bbe182732cd3b00bf3d1bb7c2380",
        "previousBlock": Object {
          "number": 29021,
          "previousBlock": Object {
            "number": 29020,
            "previousBlock": Object {
              "number": 29019,
            },
          },
        },
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
